--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 
     <div id="app"></div>
     <div class="container">
-      <div class="row-fluid top-nav">
+      <div class="row top-nav">
         hi
       </div>
     </div>
