--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   </head>
   <body>
 
-    <h1>Hello World</h1>
-
+    <div id="app"></div>
+    <div class="container">
+      <div class="row top-nav">
+        hi
+      </div>
+    </div>
     <script src="js/bundle.js"></script>
   </body>
 </html>
