--- a/app/index.html
+++ b/app/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     <title>final project</title>
     <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Raleway" rel="stylesheet">
   </head>
   <body>
 
     <div id="app"></div>
-  
+
     <script src="js/bundle.js"></script>
   </body>
 </html>
