publish: removed material ui, breaking
generated from commit e9e7e11ea2989212bc31621b16a7fc80525aeed7

--- a/index.html
+++ b/index.html
@@ -5,15 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     <title>final project</title>
     <link rel="stylesheet" href="css/app.css">
-  </head>
-  <body>
+    <link href="//cdn.muicss.com/mui-0.9.4/css/mui.min.css" rel="stylesheet" type="text/css" media="screen" />
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Raleway" rel="stylesheet">
+    <link rel="stylesheet" href="/node_modules/material-design-lite/material.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
+  </head>
+
+  <body>
     <div id="app"></div>
-    <div class="container">
-      <div class="row top-nav">
-        hi
-      </div>
-    </div>
+
     <script src="js/bundle.js"></script>
+    <script src="/node_modules/material-design-lite/material.min.js"></script>
+
+
+</script>
   </body>
 </html>
