--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,11 @@
   </head>
 
   <body>
-    <div id="app"></div>
+    <div>
+      <h1>NAV BAR HERE</h1>
+      <div id="app"></div>
+      <h1>FOOTER HERE</h1>
+    </div>
 
     <script src="js/bundle.js"></script>
   </body>
