--- a/index.html
+++ b/index.html
@@ -7,15 +7,23 @@
     <link rel="stylesheet" href="css/app.css">
     <link href="//cdn.muicss.com/mui-0.9.4/css/mui.min.css" rel="stylesheet" type="text/css" media="screen" />
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Raleway" rel="stylesheet">
+    <link rel="stylesheet" href="/node_modules/material-design-lite/material.min.css">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.blue_grey-orange.min.css" />
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
   </head>
 
   <body>
     <div>
-      <h1>NAV BAR HERE</h1>
+
       <div id="app"></div>
-      <h1>FOOTER HERE</h1>
+
     </div>
 
     <script src="js/bundle.js"></script>
+    <script src="/node_modules/material-design-lite/material.min.js"></script>
+
   </body>
 </html>
