publish: functional. styling
generated from commit fcb63cd2a3616679706f24bc5cca0e32ca0409b9

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
   <body>
     <div>
 
-      <div id="app"></div>
+      <div className="container" id="app"></div>
 
     </div>
 
     <script src="js/bundle.js"></script>
     <script src="/node_modules/material-design-lite/material.min.js"></script>
-    <script type="text/javascript"src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDj3FS6gNuCDoMV680bQA1PIZxOSiOj9YI&libraries=geometry,places,visualization"></script> 
+    <script type="text/javascript"src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDj3FS6gNuCDoMV680bQA1PIZxOSiOj9YI&libraries=geometry,places,visualization"></script>
 
   </body>
 </html>
